@@ -6,6 +6,9 @@
 	* libseahorse/seahorse-context.c: Fix problem with not creating 'missing'
 	objects when the 'auto_retrieve' setting isn't set. Fixes bug #570456
 	
+	* libseahorse/seahorse-unknown-source.c: Set location of unknown objects
+	correctly to signifiy searching or missing.
+	
 2009-02-05  Stef Walter  <stef@memberwebs.com>
 
 	* libseahorse/seahorse-context.c: 
